# pinn-uff-sistemas-continuos

./: .gitignore  README.md  TODO  charts.md  diagrams.md  doc.md  info.md  main-readme.md  main.py  momento.md  pyproject.toml  solvers.md
src/app/: config.yaml  main.py  predict.py
src/configs/: bc.py  loader.py  train_configs.py
src/core/: catia_data.xlsx  equations.py  graphs.py  models.py  solvers.py
src/core/equations/: __init__.py  base.py  factory.py  ode2_linear.py  ode4_elasticity.py  quadratic.py
src/core/solvers/: __init__.py  algebraic.py  base.py  ode2.py  ode4.py
src/experiments/pde_4th_order/: config.py  experiment.yaml
tests/: test_equations.py
